--- a/sites/all/themes/cyberhus_evolution/sass/components/_views.scss
+++ b/sites/all/themes/cyberhus_evolution/sass/components/_views.scss
@@ -134,6 +134,9 @@ body.front {
         }
       }
     }
+    .author-timestamp {
+      max-width: 90%;
+    }
   }
 }
 
